--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,6 +17,12 @@
   }
 }
 
+@mixin onLargeScreen {
+  @media (min-width: $large-screen) {
+    @content;
+  }
+}
+
 @mixin contentPaddingInline {
   padding-inline: 20px;
 
@@ -26,7 +32,6 @@
 
   @include onDesktop {
     padding-inline: 55px;
-    // max-width: $desktop-width;
     margin: 0 auto;
   }
 }
