add href prop on contact-us fields

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -207,7 +207,7 @@
       }
     }
 
-    &__content {
+    &__contact-us {
       color: $secondary-black-color;
       font-family: $ibm;
       font-size: 14px;
