--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,15 @@
 .footer {
   padding-block: 50px;
 
+  &__logo {
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.3s;
+    }
+  }
+
   &__inner {
     @include onDesktop {
       display: flex;
@@ -93,6 +102,13 @@
     width: 24px;
     height: 24px;
     margin-left: 20px;
+
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.3s;
+    }
   }
 
   &__contacts {
@@ -117,6 +133,13 @@
     &-link {
       display: block;
       color: $accent-title;
+
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+        transition: all 0.3s;
+      }
     }
   }
 
@@ -124,6 +147,8 @@
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
+    height: 50px;
+    width: 50%;
 
     @include onTablet {
       margin-left: 135px;
@@ -136,6 +161,12 @@
     &__item {
       flex-basis: 50%;
       padding-bottom: 20px;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+        transition: all 0.3s;
+      }
     }
 
     &__link {
