--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  margin-bottom: 200px;
   &__wrapper {
     @include onTablet {
       position: relative;
@@ -23,6 +24,14 @@
     top: 10px;
     left: 45%;
     margin-top: 10px;
+    cursor: pointer;
+
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.3s;
+    }
 
     @include onTablet {
       left: 10%;
@@ -41,6 +50,13 @@
 
     @include onDesktop {
       left: 55px;
+    }
+
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.3s;
     }
   }
 
