--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -91,5 +91,12 @@
     background-color: #f14a27;
     width: 50px;
     cursor: pointer;
+
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+      transition: all 0.3s;
+    }
   }
 }
