footer link hover, form reload

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -149,6 +149,13 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
+      border-bottom: 1px solid transparent;
+
+      @include add-transition;
+
+      &:hover {
+        border-bottom: 1px solid $main-green-color;
+      }
     }
   }
 
