--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -141,6 +141,7 @@
   display: flex;
   border: 1px solid $main-green-color;
   text-decoration: none;
+  box-sizing: content-box;
 
   @include tablet {
     width: fit-content;
@@ -179,12 +180,12 @@
 
     @include mobile {
       min-width: 50px;
-      height: 48px;
+      height: 100%;
     }
 
     @include tablet {
       min-width: 68px;
-      height: 68px;
+      height: 100%;
     }
   }
 }
