fixed last commits

--- a/src/styles/blocks/subscription.block.scss
+++ b/src/styles/blocks/subscription.block.scss
@@ -27,7 +27,7 @@
     justify-content: center;
     gap: 30px;
   }
-  
+
   input[type="email"] {
     outline: none;
   }
@@ -83,6 +83,7 @@
     font-weight: 400;
     font-size: 14px;
     padding: 28px 0 28px 32px;
+    cursor: pointer;
 
     @include on-phone {
       width: 230px;
