responsive header, logos hrefs, fax, title, tiket-btn

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -105,7 +105,7 @@
     }
 
     @include desktop {
-      margin-right: -45px;
+      margin-right: calc(((1170px - 100vw) / 2) + 9px);
       font-size: 48px;
       grid-column: span 7;
     }
@@ -180,7 +180,7 @@
 
     @include mobile {
       min-width: 50px;
-      height: 100%;
+      min-height: 100%;
     }
 
     @include tablet {
