--- a/src/styles/blocks/common.scss
+++ b/src/styles/blocks/common.scss
@@ -21,3 +21,17 @@ a {
   margin: 0;
   padding: 0;
 }
+
+.title {
+  color: $accent-title;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+    text-align: left;
+  }
+}
