--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,8 +1,17 @@
 .gallery {
+  &__title {
+    color: $accent-title;
+    font-family: Montserrat;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 100%;
+  }
+
   &__img {
     width: 100%;
     height: 100%;
     transition: all 0.3s;
+    cursor: pointer;
 
     @include onDesktop {
       &:hover {
@@ -83,11 +92,17 @@
   &__slides {
     display: flex;
     overflow: hidden;
+    margin-top: 40px;
+
+    @include onTablet {
+      margin-top: 48px;
+    }
 
     @include onDesktop {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 30px;
+      margin-top: 56px;
     }
   }
 
