--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -38,6 +38,7 @@
 
     @include onTablet {
       border-bottom: none;
+      flex-basis: 50%;
     }
   }
 
@@ -46,6 +47,14 @@
     flex-wrap: wrap;
     padding-left: 28px;
     padding-right: 20px;
+
+    @include onTablet {
+      padding-left: 38px;
+    }
+
+    @include onDesktop {
+      padding-left: 100px;
+    }
 
     &__item {
       flex-basis: 50%;
@@ -95,6 +104,10 @@
       min-width: 50%;
       border-left: 1px solid rgba(255, 255, 255, 0.5);
       padding-left: 38px;
+    }
+
+    @include onDesktop {
+      padding-left: 102px;
     }
 
     &-title {
