--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,25 +6,18 @@
   }
 
   @include onDesktop {
-    // padding-top: 200px;
+    padding-top: 200px;
   }
 
-  &-title {
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 100%;
-    color: $accent-title;
-
-    margin-bottom: 40px;
+  &-cards {
+    margin-top: 40px;
 
     @include onTablet {
-      margin-bottom: 48px;
+      margin-top: 48px;
     }
 
     @include onDesktop {
-      margin-bottom: 56px;
+      margin-top: 56px;
     }
   }
 
@@ -44,6 +37,7 @@
     &__image {
       width: 100%;
       height: 100%;
+      cursor: pointer;
 
       @include onTablet {
         margin-bottom: 44px;
@@ -52,6 +46,7 @@
       @include onDesktop {
         height: 520px;
         width: 670px;
+        margin-bottom: 0;
 
         &:hover {
           transform: scale(1.1);
@@ -141,6 +136,7 @@
     &__img {
       width: 100%;
       height: 210px;
+      cursor: pointer;
 
       @include onTablet {
         height: 390px;
