--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -38,6 +38,10 @@
       justify-content: start;
       margin-right: 40px;
     }
+
+    @include onDesktop {
+      margin-right: 115px;
+    }
   }
 
   &__content {
@@ -46,12 +50,12 @@
     justify-content: space-between;
     padding-bottom: 90px;
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
-    padding-right: 70px;
 
     @include onDesktop {
       border-right: 1px solid rgba(26, 90, 76, 0.5);
       border-bottom: none;
       padding-bottom: 0;
+      padding-right: 70px;
     }
   }
 
@@ -148,14 +152,15 @@
     display: flex;
     flex-wrap: wrap;
     height: 50px;
-    width: 50%;
 
     @include onTablet {
       margin-left: 135px;
+      width: 50%;
     }
 
     @include onDesktop {
       margin-top: 0;
+      margin-left: 65px;
     }
 
     &__item {
