--- a/src/styles/blocks/common.scss
+++ b/src/styles/blocks/common.scss
@@ -25,7 +25,7 @@ a {
 .title {
   color: $accent-title;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 100%;
