--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
   &__title {
     color: $accent-title;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 48px;
     font-weight: 700;
     line-height: 100%;
