favicon, hovers, container

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,5 +1,7 @@
 @import "blocks/header";
+@import "blocks/buy-tickets";
 @import "blocks/menu";
+@import "blocks/nav";
 @import "blocks/schedule";
 @import "blocks/section";
 @import "blocks/event";
