--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -105,7 +105,7 @@
     }
 
     @include desktop {
-      margin-right: calc(((1170px - 100vw) / 2) + 9px);
+      margin-right: -55px;
       font-size: 48px;
       grid-column: span 7;
     }
@@ -133,59 +133,6 @@
 
     @include desktop {
       width: 170px;
-    }
-  }
-}
-
-.buy-tickets {
-  display: flex;
-  border: 1px solid $main-green-color;
-  text-decoration: none;
-  box-sizing: content-box;
-
-  @include tablet {
-    width: fit-content;
-    height: 70px;
-  }
-
-  @include desktop {
-    margin-left: auto;
-  }
-
-  &__text {
-    text-transform: uppercase;
-
-    color: $secondary-black-color;
-    font-family: $ibm;
-    font-size: 16px;
-    font-weight: 500;
-
-    @include mobile {
-      width: 100%;
-      text-align: center;
-      line-height: 48px;
-    }
-
-    @include tablet {
-      line-height: 68px;
-      padding-inline: 68px;
-    }
-  }
-
-  &__arrow {
-    background-color: $main-green-color;
-    background-image: url("../images/right-arrow.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-
-    @include mobile {
-      min-width: 50px;
-      min-height: 100%;
-    }
-
-    @include tablet {
-      min-width: 68px;
-      height: 100%;
     }
   }
 }
