--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/general/page";
+@import "./blocks/sections/header";
+@import "./blocks/sections/relevant";
+@import "./blocks/sections/gallery";
+@import "./blocks/sections/slider";
