--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$effect-duration: 0.3s;
+$black-text-color: #0F0E08;
+$description-text-color: #4E4E4E;
+$white-text-color: #fff;
+$green-page-color: #1A5A4C;
+$grey-text-color: #687480;
+$red-page-color: #F14A27;
+$slider-buttons-color: #E0E0E0;
+$swiper-pagination-bottom: 30px;
+
