--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -30,6 +30,10 @@
       padding-block: 40px;
       padding-inline: 34px;
     }
+
+    @include onDesktop {
+      padding-inline: 55px;
+    }
   }
 
   &-top {
@@ -60,13 +64,6 @@
       flex-basis: 50%;
       padding-bottom: 24px;
       padding-right: 15px;
-
-      transition: all 0.3s;
-
-      &:hover {
-        transform: scale(1.05);
-        transition: all 0.3s;
-      }
     }
 
     &__link {
@@ -75,6 +72,12 @@
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
+      transition: all 0.3s;
+
+      &:hover {
+        color: #f14a27;
+        transition: all 0.3s;
+      }
     }
   }
 
