--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -167,11 +167,6 @@
       flex-basis: 50%;
       padding-bottom: 20px;
       transition: all 0.3s;
-
-      &:hover {
-        transform: scale(1.05);
-        transition: all 0.3s;
-      }
     }
 
     &__link {
@@ -180,6 +175,12 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
+      transition: all 0.3s;
+
+      &:hover {
+        color: #f14a27;
+        transition: all 0.3s;
+      }
     }
   }
 
