--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -39,6 +39,12 @@
       }
     }
 
+    &-1 {
+      @include onDesktop {
+        grid-area: 1/1/2/2;
+      }
+    }
+
     &-2 {
       @include onTablet {
         display: block;
@@ -46,41 +52,14 @@
       }
 
       @include onDesktop {
-        grid-column: span 3;
-      }
-
-      @include onLargeScreen {
-        grid-column: auto;
-      }
-    }
-
-    &-1 {
-      @include onDesktop {
-        grid-column: span 1;
-      }
-
-      @include onLargeScreen {
-        grid-column: auto;
+        margin-left: 0;
+        grid-area: 1/2/2/-1;
       }
     }
 
     &-3 {
       @include onDesktop {
-        grid-column: span 3;
-      }
-
-      @include onLargeScreen {
-        grid-column: auto;
-      }
-    }
-
-    &-4 {
-      @include onDesktop {
-        grid-column: span 1;
-      }
-
-      @include onLargeScreen {
-        grid-column: auto;
+        grid-area: 2/1/3/3;
       }
     }
 
@@ -99,10 +78,13 @@
     }
 
     @include onDesktop {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 30px;
-      margin-top: 56px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 30px;
+      row-gap: 30px;
+      width: 100%;
+      justify-items: stretch;
     }
   }
 
@@ -111,6 +93,7 @@
     justify-content: space-between;
     margin-inline: auto;
     width: 100px;
+    margin-top: 32px;
 
     @include onDesktop {
       display: none;
