--- a/src/styles/blocks/_contact-us.scss
+++ b/src/styles/blocks/_contact-us.scss
@@ -3,5 +3,12 @@
     text-decoration: none;
     color: inherit;
     display: block;
+    border-bottom: 1px solid transparent;
+
+    @include add-transition;
+
+    &:hover {
+      border-bottom: 1px solid $main-black-color;
+    }
   }
 }
