--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -59,10 +59,10 @@
 
   &__line {
     background: rgba(26, 90, 76, 0.5);
+    height: 1px;
 
     @include mobile {
       width: 100%;
-      height: 1px;
       margin: 20px 0 40px;
       grid-column: 1 / -1;
     }
@@ -83,12 +83,14 @@
 
   &__nav {
     @include mobile {
-      @include page-grid;
-
+      display: flex;
+      gap: 20px;
       grid-column: 1 / -1;
     }
 
     @include tablet {
+      display: flex;
+      gap: 30px;
       grid-column: 2 / 6;
     }
 
@@ -107,7 +109,12 @@
       flex-direction: column;
       margin-bottom: 80px;
 
+      @include mobile {
+        width: 100%;
+      }
+
       @include tablet {
+        width: 100%;
         margin-bottom: 120px;
       }
 
