--- a/src/styles/elements/icons.scss
+++ b/src/styles/elements/icons.scss
@@ -20,6 +20,10 @@
 
   &--close {
     background-image: url(../images/icons/close.svg);
+
+    @include desktop {
+      min-width: 24px;
+    }
   }
   &--facebook {
     background-image: url(../images/icons/facebook.svg);
