--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -48,6 +48,18 @@
 
   &__top {
     display: flex;
+
+    @include mobile {
+      justify-content: space-between;
+    }
+
+    @include tablet {
+      width: 100%;
+    }
+
+    @include desktop {
+      width: auto;
+    }
   }
 
   &__middle {
@@ -73,11 +85,13 @@
     @include mobile {
       max-width: 100%;
       padding-top: 24px;
+      margin-inline: 0;
     }
 
     @include tablet {
       max-width: 50%;
       padding-top: 0;
+      margin: 0;
     }
 
     &--title {
