fixed last commits

--- a/src/styles/blocks/galery.block.scss
+++ b/src/styles/blocks/galery.block.scss
@@ -7,6 +7,14 @@
     margin: 0 20px 129px;
   }
 
+  @include on-phone-big {
+    display: grid;
+    grid-template-columns: repeat(2, 100px);
+    justify-content: center;
+    gap: 20px;
+    margin: 0 20px 129px;
+  }
+
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 90px);
@@ -35,6 +43,11 @@
     margin: 0 0 0 50px;
   }
 
+  @include on-phone-big {
+    grid-column: 1/2;
+    margin: 0 0 0 50px;
+  }
+
   @include on-tablet {
     position: relative;
     grid-row: 1;
@@ -52,6 +65,13 @@
 
 .galery__photo-1 {
   @include on-phone {
+    width: 280px;
+    height: 410px;
+    grid-column: 1/4;
+    grid-row: 2;
+  }
+
+  @include on-phone-big {
     width: 280px;
     height: 410px;
     grid-column: 1/4;
@@ -78,6 +98,10 @@
     display: none;
   }
 
+  @include on-phone-big {
+    display: none;
+  }
+
   @include on-tablet {
     display: block;
     width: 340px;
@@ -101,6 +125,10 @@
     display: none;
   }
 
+  @include on-phone-big {
+    display: none;
+  }
+
   @include on-desctop {
     display: block;
     width: 770px;
@@ -112,6 +140,10 @@
 
 .galery__photo-4 {
   @include on-phone {
+    display: none;
+  }
+
+  @include on-phone-big {
     display: none;
   }
 
@@ -129,6 +161,13 @@
   transition: 1s;
 
   @include on-phone {
+    width: 280px;
+    height: 410px;
+    grid-column: 1/4;
+    grid-row: 2;
+  }
+
+  @include on-phone-big {
     width: 280px;
     height: 410px;
     grid-column: 1/4;
@@ -189,6 +228,11 @@
     left: -200px
   }
 
+  @include on-phone-big {
+    bottom: -500px;
+    left: -200px
+  }
+
   @include on-tablet {
      display: none;
      bottom: -730px;
@@ -237,6 +281,11 @@
     left: 90px
   }
 
+  @include on-phone-big {
+    bottom: -500px;
+    left: 90px
+  }
+
   @include on-tablet {
      display: none;
      bottom: -730px;
@@ -255,6 +304,10 @@
 
 .container {
   @include on-phone {
+    display: block;
+  }
+
+  @include on-phone-big {
     display: block;
   }
 
