--- a/src/styles/blocks/lectures.block.scss
+++ b/src/styles/blocks/lectures.block.scss
@@ -15,6 +15,15 @@
     margin: 0 0 150px;
   }
 
+  @include on-phone-big {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    justify-content: center;
+    gap: 20px;
+    height: 210px;
+    margin: 0 0 150px;
+  }
+
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 90px);
@@ -45,6 +54,12 @@
     grid-row: 9;
   }
 
+  @include on-phone-big {
+    width: 280px;
+    height: 140px;
+    grid-row: 9;
+  }
+
   @include on-tablet {
     width: 570px;
     height: 204px;
@@ -70,6 +85,10 @@
     color: $lightgray;
 
     @include on-phone {
+      margin: 24px 0 0 21px;
+    }
+
+    @include on-phone-big {
       margin: 24px 0 0 21px;
     }
 
@@ -117,6 +136,13 @@
     padding: 0;
   }
 
+  @include on-phone-big {
+    font-weight: 400;
+    font-size: 28px;
+    text-align: center;
+    padding: 0;
+  }
+
   @include on-tablet {
     font-weight: 400;
     font-size: 36px;
@@ -137,6 +163,12 @@
   background-color: #1a5a4c ;
 
   @include on-phone {
+    bottom: -320px;
+    left: 5px;
+    width: 280px;
+  }
+
+  @include on-phone-big {
     bottom: -320px;
     left: 5px;
     width: 280px;
