--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -72,6 +72,12 @@
       margin-bottom: 40px;
     }
 
+    @include on-phone-big {
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
     @include on-tablet {
       text-align: left;
     }
@@ -90,6 +96,11 @@
         margin-bottom: 20px;
       }
 
+      @include on-phone-big {
+        margin-top: 88px;
+        margin-bottom: 20px;
+      }
+
       @include on-tablet {
         margin-top: 82px;
       }
@@ -101,6 +112,10 @@
 
     &--gallery {
       @include on-phone {
+        text-align: center;
+      }
+
+      @include on-phone-big {
         text-align: center;
       }
 
