--- a/src/styles/blocks/subscription.block.scss
+++ b/src/styles/blocks/subscription.block.scss
@@ -14,6 +14,14 @@
     margin: 0 0 48px;
   }
 
+  @include on-phone-big {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    justify-content: center;
+    gap: 20px;
+    margin: 0 0 48px;
+  }
+
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 90px);
@@ -41,6 +49,11 @@
   margin: 0;
 
   @include on-phone {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  @include on-phone-big {
     grid-column: 1/3;
     grid-row: 1;
   }
@@ -92,6 +105,13 @@
       padding: 0 0 0 24px;
     }
 
+    @include on-phone-big {
+      width: 230px;
+      height: 50px;
+      margin-right: 0;
+      padding: 0 0 0 24px;
+    }
+
     @include on-tablet {
       width: 374px;
       height: 70px;
@@ -112,6 +132,12 @@
     cursor: pointer;
 
     @include on-phone {
+      width: 50px;
+      height: 50px;
+      padding: 0;
+    }
+
+    @include on-phone-big {
       width: 50px;
       height: 50px;
       padding: 0;
