--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -6,7 +6,13 @@
 }
 
 @mixin on-phone {
-  @media (min-width: 320px) {
+  @media ( min-width: 320px) {
+    @content;
+  }
+}
+
+@mixin on-phone-big {
+  @media ( min-width: 520px) {
     @content;
   }
 }
