--- a/src/styles/blocks/actual_content.scss
+++ b/src/styles/blocks/actual_content.scss
@@ -9,6 +9,14 @@
     margin: 0 20px;
   }
 
+  @include on-phone-big {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    justify-content: center;
+    gap: 20px;
+    margin: 0 20px;
+  }
+
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 90px);
@@ -26,6 +34,7 @@
   }
 
   .actual__title {
+    position: relative;
     text-align: center;
     font-family: $mont;
     font-weight: 700;
@@ -35,6 +44,12 @@
     @include on-phone {
       grid-column: 1/3;
       grid-row: 1;
+    }
+
+    @include on-phone-big {
+      grid-column: 1/3;
+      grid-row: 1;
+      left: 70px;
     }
 
     @include on-tablet {
@@ -60,6 +75,12 @@
       grid-row: 2;
     }
 
+    @include on-phone-big {
+      width: 440px;
+      height: 440px;
+      grid-column: 1/4;
+    }
+
     @include on-tablet {
       width: 700px;
       height: 520px;
@@ -76,9 +97,17 @@
   }
 
   .actual__container {
+    position: relative;
+
     @include on-phone {
       grid-column: 1/3;
       grid-row: 3;
+    }
+
+    @include on-phone-big {
+      grid-column: 1/3;
+      grid-row: 3;
+      left: 70px;
     }
 
     @include on-tablet {
@@ -100,6 +129,13 @@
       grid-row: 4;
     }
 
+    @include on-phone-big {
+      width: 440px;
+      height: 440px;
+      grid-column: 1/4;
+      grid-row: 4;
+    }
+
     @include on-tablet {
       width: 700px;
       height: 520px;
@@ -116,9 +152,17 @@
   }
 
   .actual__container-2 {
+      position: relative;
+
     @include on-phone {
       grid-column: 1/3;
       grid-row: 5;
+    }
+
+    @include on-phone-big {
+      grid-column: 1/3;
+      grid-row: 5;
+      left: 70px;
     }
 
     @include on-tablet {
@@ -169,6 +213,11 @@
       font-weight: bold;
     }
 
+    @include on-phone-big {
+      font-size: 16px;
+      font-weight: bold;
+    }
+
     @include on-tablet {
       padding-left: 30px;
       font-weight: 700;
@@ -199,6 +248,10 @@
     background-color: $redback;
 
     @include on-phone {
+      margin: 38px 0 0 10px;
+    }
+
+    @include on-phone-big {
       margin: 38px 0 0 10px;
     }
 
