--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,6 +9,14 @@
     margin: 50 22px 68px;
   }
 
+  @include on-phone-big {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    justify-content: center;
+    gap: 20px;
+    margin: 50 22px 68px;
+  }
+
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 90px);
@@ -30,6 +38,11 @@
   width: 280px;
 
   @include on-phone {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @include on-phone-big {
     flex-direction: row;
     justify-content: space-between;
   }
@@ -73,6 +86,10 @@
       margin: 30px 0 0;
     }
 
+    @include on-phone-big {
+      margin: 30px 0 0;
+    }
+
     @include on-tablet {
       margin: 0;
     }
@@ -88,6 +105,12 @@
   margin-left: -30px;
 
   @include on-phone {
+    grid-column: 1/1;
+    grid-row: 2;
+    left: 20px;
+  }
+
+  @include on-phone-big {
     grid-column: 1/1;
     grid-row: 2;
     left: 20px;
@@ -115,6 +138,10 @@
   display: flex;
 
   @include on-phone {
+    flex-direction: column;
+  }
+
+  @include on-phone-big {
     flex-direction: column;
   }
 
@@ -177,6 +204,11 @@
     grid-row: 2;
   }
 
+  @include on-phone-big {
+    grid-column: 2/2;
+    grid-row: 2;
+  }
+
   @include on-tablet {
     grid-row: 1;
     grid-column: 4/7;
@@ -217,6 +249,12 @@
     margin: 0 0 20px 80px;
   }
 
+  @include on-phone-big {
+    grid-column: 2;
+    grid-row: 3;
+    margin: 0 0 20px 80px;
+  }
+
   @include on-tablet {
     display: none;
   }
@@ -233,6 +271,10 @@
 
 .footer__line {
   @include on-phone {
+    display: none;
+  }
+
+  @include on-phone-big {
     display: none;
   }
 
@@ -257,6 +299,13 @@
     grid-row: 3;
   }
 
+  @include on-phone-big {
+    width: 280px;
+    border-bottom: 2px solid rgba(26, 90, 76, 0.5);
+    grid-column: 1/3;
+    grid-row: 3;
+  }
+
   @include on-tablet {
     width: 460px;
     border-bottom: 2px solid rgba(26, 90, 76, 0.5);
@@ -273,6 +322,13 @@
   position: relative;
 
   @include on-phone {
+    grid-row: 4;
+    grid-column: 1/3;
+    max-width: 1px;
+    left: -70px;
+  }
+
+  @include on-phone-big {
     grid-row: 4;
     grid-column: 1/3;
     max-width: 1px;
@@ -335,6 +391,13 @@
     top: 30px;
   }
 
+  @include on-phone-big {
+    grid-row: 6;
+    grid-column: 1/3;
+    left: 40px;
+    top: 30px;
+  }
+
   @include on-tablet {
     grid-column: 1/3;
     grid-row: 5;
@@ -351,6 +414,12 @@
 
   &:last-child {
     @include on-phone {
+      grid-row: 5;
+      grid-column: 1/3;
+      margin-left: 30px;
+    }
+
+    @include on-phone-big {
       grid-row: 5;
       grid-column: 1/3;
       margin-left: 30px;
