social hover, image, header padding

--- a/src/styles/blocks/_contact-us.scss
+++ b/src/styles/blocks/_contact-us.scss
@@ -1,8 +1,9 @@
 .contact-us {
   &__link {
+    display: block;
+    width: fit-content;
     text-decoration: none;
     color: inherit;
-    display: block;
     border-bottom: 1px solid transparent;
 
     @include add-transition;
