--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -70,8 +70,8 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 100%; /* 14px */
-    writing-mode: sideways-lr;
     text-transform: uppercase;
+    transform: rotate(-90deg);
 
     @include desktop {
       display: block;
@@ -79,10 +79,10 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -90px;
-      left: 50%;
-      height: 70px;
-      width: 1px;
+      bottom: 50%;
+      left: -90px;
+      width: 70px;
+      height: 1px;
       background-color: $main-green-color;
     }
   }
@@ -106,7 +106,7 @@
     }
 
     @include desktop {
-      margin-right: -55px;
+      margin-right: calc((1170px - 100vw) / 2 + 11px);
       font-size: 48px;
       grid-column: span 7;
     }
