--- a/src/styles/elements/icons.scss
+++ b/src/styles/elements/icons.scss
@@ -25,10 +25,28 @@
       min-width: 24px;
     }
   }
+
   &--facebook {
     background-image: url(../images/icons/facebook.svg);
+    border-radius: 30%;
+
+    @include add-transition;
+
+    &:hover {
+      background-image: url(../images/icons/facebook-hover.svg);
+      background-color: black;
+    }
   }
+
   &--instagram {
     background-image: url(../images/icons/instagram.svg);
+    border-radius: 30%;
+
+    @include add-transition;
+
+    &:hover {
+      background-image: url(../images/icons/instagram-hover.svg);
+      background-color: black;
+    }
   }
 }
