fixed last commits

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -74,12 +74,24 @@
     .footer__inst {
       width: 24px;
       height: 24px;
+      transition: 0.3s ease-in-out;
+
+  &:hover {
+    opacity: 0.3;
+    transition: 0.3s ease-in-out;
+  }
     }
 
     .footer__facebook {
       height: 24px;
       width: 11px;
       margin-right: 29px;
+      transition: 0.3s ease-in-out;
+
+  &:hover {
+    opacity: 0.3;
+    transition: 0.3s ease-in-out;
+  }
     }
 
     @include on-phone {
@@ -371,6 +383,7 @@
 
     &:hover {
       font-size: 18px;
+      opacity: 0.4;
       transition: 0.3s ease-in-out;
       margin-bottom: -5px;
     }
