--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -57,7 +57,7 @@
   }
 
   @include on-phone-big {
-    width: 550px;
+    width: 620px;
     height: 450px;
     grid-column: 1/4;
     grid-row: 1;
@@ -107,7 +107,7 @@
 
 .header__menu-link {
     position: relative;
-    
+
   @include on-phone {
     grid-column: 1/1;
     grid-row: 1;
@@ -119,7 +119,7 @@
     grid-column: 1/1;
     grid-row: 1;
     margin-top: 25px;
-    left: 20px;
+    left: 40px;
   }
 
   @include on-tablet {
@@ -184,6 +184,7 @@
 }
 
 .header__box {
+  position: relative;
   display: flex;
 
   @include on-phone {
@@ -194,18 +195,21 @@
   @include on-phone-big {
     grid-column: 1/3;
     grid-row: 3;
+    left: 150px;
   }
 
   @include on-tablet {
     grid-column: 1/3;
     grid-row: 1;
     margin: 295px 0 0;
+    left: 50px;
   }
 
   @include on-desctop {
     grid-column: 3/7;
     grid-row: 1;
     margin: 467px 0 0;
+    left: -40px;
   }
 }
 
@@ -222,10 +226,7 @@
   color: $dark;
   border: 1px solid $lightgreen;
   margin: 0;
-
-  &:hover {
-    background-color: green;
-  }
+  transition: 0.5s ease-in-out;
 }
 
 
@@ -237,14 +238,16 @@
   border: none;
   padding: 0;
   cursor: pointer;
-
-  &:hover {
-    background-color: green;
-  }
+  transition: 0.2s ease-in-out;
 
   &:active {
     background-color: darkgreen;
   }
+}
+
+.hovered {
+  background-color: green;
+  transition: 0.2s ease-in-out;
 }
 
 .header__button-string {
