--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -10,6 +10,7 @@
   }
 
   @include tablet {
+    padding-inline: 0;
     gap: 30px;
   }
 
@@ -32,6 +33,10 @@
     }
 
     @include mobile {
+      max-height: 410px;
+    }
+
+    @include tablet {
       max-height: 410px;
     }
 
