--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -26,7 +26,7 @@
     font-family: $ibm;
     font-size: 16px;
     font-weight: 500;
-    line-height: 100%; /* 22px */
+    line-height: 100%;
     padding: 27px 20px;
 
     display: flex;
