--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -90,6 +90,10 @@
       padding-left: 24px;
     }
 
+    @include tablet {
+      padding-left: 24px;
+    }
+
     @include desktop {
       padding-inline: 32px;
     }
@@ -108,11 +112,18 @@
 
   &__send-btn {
     border: none;
-    background: $main-red-color;
+    background-color: $main-red-color;
     background-image: url("../images/right-arrow-black.svg");
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
+
+    @include add-transition;
+
+    &:hover {
+      background-color: $main-green-color;
+      background-image: url("../images/right-arrow.svg");
+    }
 
     @include mobile {
       height: 50px;
