--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -13,7 +13,7 @@
   }
 
   @include desktop {
-    padding-inline: 55px;
+    padding-inline: 0;
   }
   &__top {
     display: flex;
@@ -214,6 +214,10 @@
       margin: 0;
 
       @include mobile {
+        margin-bottom: 20px;
+      }
+
+      @include tablet {
         margin-bottom: 20px;
       }
 
