--- a/src/styles/blocks/general/_page.scss
+++ b/src/styles/blocks/general/_page.scss
@@ -4,12 +4,19 @@
   transition-duration: $effect-duration;
 }
 
-.body {
-  display: grid;
+.page {
+  scroll-behavior: smooth;
 
-  &__main {
-    display: grid;
-  }
+  // &:has(.menu:target) {
+  //   overflow: hidden;
+  // }
 }
 
+.body {
+  display: grid;
+}
+
+.main {
+  display: grid;
+}
 
