--- a/src/styles/blocks/sections/_header.scss
+++ b/src/styles/blocks/sections/_header.scss
@@ -12,15 +12,15 @@
   }
 
   &__image {
-    display:flex;
+    display: flex;
     justify-content: center;
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     margin-inline: auto;
     height: 300px;
-    width: 320px;
+    width: 100%;
     background-image: url(./../images/phone/header-image-phone.png);
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
@@ -30,14 +30,15 @@
       margin-left: 15px;
       justify-content: left;
       height: 384px;
-      width: 374px;
+      width: 100%;
     }
 
     @include on-desktop {
       background-image: url(./../images/desktop/header-image-desktop.png);
       margin-left: -85px;
+      padding-right: 85px;
       height: 655px;
-      width: 725px;
+      width: 100%;
     }
   }
 
@@ -69,7 +70,8 @@
 
   &__burger-menu {
     position: absolute;
-    top: -273px;
+    display: block;
+    top: 27px;
     left: 20px;
 
     @include on-tablet {
@@ -119,10 +121,12 @@
 .buttonTickets {
   grid-column: 1 / -1;
   display: flex;
+  justify-content: center;
 
   @include on-tablet {
     grid-column: 1 / -4;
     margin-bottom: 19px;
+    justify-content: left;
   }
 
   @include on-desktop {
