--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,12 +1,11 @@
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $effect-duration: 0.3s;
-$black-text-color: #0F0E08;
-$description-text-color: #4E4E4E;
+$black-text-color: #0f0e08;
+$description-text-color: #4e4e4e;
 $white-text-color: #fff;
-$green-page-color: #1A5A4C;
+$green-page-color: #1a5a4c;
 $grey-text-color: #687480;
-$red-page-color: #F14A27;
-$slider-buttons-color: #E0E0E0;
-$swiper-pagination-bottom: 30px;
-
+$red-page-color: #f14a27;
+$slider-buttons-color: #e0e0e0;
+$placeholder-color: #687480;
