--- a/src/styles/blocks/sections/_relevant.scss
+++ b/src/styles/blocks/sections/_relevant.scss
@@ -223,16 +223,18 @@
 }
 
 .lection {
-  margin-inline: auto;
+
   position: relative;
-  margin-bottom: 183px;
+  margin-bottom: 100px;
 
   @include on-tablet {
-    margin-bottom: 208px;
+    margin-bottom: 88px;
+    margin-inline: auto;
   }
 
   @include on-desktop {
-    margin-bottom: 302px;
+    margin-bottom: 200px;
+    margin-inline: 0;
   }
 
   &__image {
@@ -240,20 +242,20 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    width: 320px;
+    width: 100%;
     height: 210px;
 
     @include on-tablet {
       background-image: url(./../images/tablet/lection-paintiong-tablet.png);
       height: 390px;
-      width: 700px;
+      width: 690px;
       margin-inline: 39px;
     }
 
     @include on-desktop {
       background-image: url(./../images/desktop/lection-paintiong-desktop.png);
       height: 550px;
-      width: 1280px;
+      width: 100%;
       margin-inline: 0;
     }
   }
@@ -266,24 +268,21 @@
     background-color: $white-text-color;
     width: 280px;
     height: 140px;
-    margin-inline: 20px;
     padding-block: 20px;
-    position: absolute;
-    top: 153px;
     box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    transform: translateY(-57px);
+    margin-inline: auto;
 
     @include on-tablet {
       width: 570px;
       height: 204px;
-      top: 306px;
-      margin-inline: 104px;
       padding: 45px 55px 50px;
+      transform: translateY(-84px);
     }
 
     @include on-desktop {
-      top: 448px;
-      margin-inline: 355px;
       padding: 45px 100px 50px;
+      transform: translateY(-102px);
     }
   }
 
