--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,11 @@
 @import "fonts";
 @import "typography";
 @import "./blocks/general/page";
+@import "./blocks/general/buttonUp";
+@import "./blocks/general/menu";
 @import "./blocks/sections/header";
 @import "./blocks/sections/relevant";
 @import "./blocks/sections/gallery";
 @import "./blocks/sections/slider";
+@import "./blocks/sections/subscription";
+@import "./blocks/sections/footer";
