--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -20,11 +20,11 @@
 @mixin page-grid {
   display: grid;
   column-gap: 20px;
-  grid-template-columns: repeat(2, 130px);
+  grid-template-columns: repeat(2, 1fr);
 
   @include on-tablet {
     column-gap: 30px;
-    grid-template-columns: repeat(6, 90px);
+    grid-template-columns: repeat(6, 1fr);
   }
 
   @include on-desktop {
