finished mobile version and implemented tablet version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,11 @@ h1 {
   font-size: 45px;
   font-weight: 700;
   line-height: 100%;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+  }
 }
 
 h2 {
@@ -28,6 +33,10 @@ h2 {
   font-size: 36px;
   font-weight: 700;
   line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+  }
 }
 
 h3 {
@@ -35,10 +44,18 @@ h3 {
   font-size: 28px;
   font-weight: 400;
   line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
 }
 
 .container {
   padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
 }
 
 .icon {
@@ -61,6 +78,11 @@ h3 {
   background-image: url("../images/icons/NA-MU__logo.svg");
 
   @include hover(transform, scale(110%));
+
+  @include onTablet {
+    width: 72px;
+    height: 72px;
+  }
 }
 
 .header {
@@ -72,14 +94,21 @@ h3 {
   background-position: right;
 
   @include onTablet {
+    margin-bottom: 88px;
+    padding-top: 15px;
     height: 384px;
     background-size: 374px 384px;
   }
 
   &__top-actions {
+    width: 55%;
+    justify-content: space-between;
     display: flex;
     align-items: center;
-    gap: 88px;
+
+    @include onTablet {
+      width: 67%;
+    }
   }
 
   &__menu {
@@ -118,6 +147,7 @@ h3 {
     }
   
     &__column {
+      width: 100px;
       display: flex;
       flex-direction: column;
       gap: 24px;
@@ -133,8 +163,10 @@ h3 {
       display: flex;
       flex-direction: column;
       font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
       line-height: 150%;
-  
+
       &-details {
         margin-top: 16px;
       }
@@ -155,6 +187,14 @@ h3 {
 .art-museum {
   margin-bottom: 70px;
 
+  @include onTablet {
+    padding: 0;
+    position: absolute;
+    top: 127px;
+    left: 34px;
+    width: 340px;
+  }
+
   &__title {
     margin-bottom: 20px;
     text-align: center;
@@ -173,6 +213,11 @@ h3 {
     font-family: IBM Plex Sans, sans-serif;
     font-weight: 500;
     line-height: 100%;
+
+    @include onTablet {
+      height: 70px;
+      border-right-width: 70px;
+    }
 
     @include hover(transform, scale(105%));
 
@@ -202,6 +247,10 @@ h3 {
       width: 100%;
 
       @include hover(transform, scale(105%));
+
+      @include onTablet {
+        margin-bottom: 44px;
+      }
     }
 
     &__type {
@@ -209,6 +258,10 @@ h3 {
       color: $greyBoldText;
       font-weight: 500;
       line-height: 150%;
+
+      @include onTablet {
+        margin-bottom: 32px;
+      }
     }
 
     &__schedule {
@@ -220,6 +273,11 @@ h3 {
     &__info {
       display: flex;
       justify-content: space-between;
+
+      @include onTablet {
+        font-size: 14px;
+        width: 220px;
+      }
     }
 
     &__title {
@@ -238,6 +296,17 @@ h3 {
 
     &__description {
       font-size: 16px;
+
+      @include onTablet {
+        width: 460px;
+        line-height: 150%;
+      }
+    }
+
+    &__last {
+      @include onTablet {
+        margin-bottom: 112px;
+      }
     }
   }
 }
@@ -245,9 +314,18 @@ h3 {
 .lections {
   margin-bottom: 60px;
 
+  @include onTablet {
+    padding: 0 34px;
+    margin-bottom: 30px;
+  }
+
   &__poster {
     height: 210px;
     background-image: url("../images/blocks/history/img-1.png");
+
+    @include onTablet {
+      height: 390px;
+    }
   }
 
   &__info {
@@ -257,10 +335,19 @@ h3 {
     background-color: $white;
     transform: translateY(-50%);
 
+    @include onTablet {
+      width: 570px;
+      height: 204px;
+    }
+
     &-wrapper {
       display: flex;
       justify-content: space-between;
       padding: 20px 21px;
+
+      @include onTablet {
+        padding: 45px 55px 23px;
+      }
     }
   }
 
@@ -269,6 +356,10 @@ h3 {
     padding-bottom: 20px;
     text-align: center;
     border-bottom: 2px solid rgba(26, 90, 76, 0.25);
+
+    @include onTablet {
+      padding-bottom: 50px;
+    }
   }
 
   &__type {
@@ -291,6 +382,11 @@ h3 {
   &__title {
     margin-bottom: 40px;
     text-align: center;
+
+    @include onTablet {
+      margin-bottom: 48px;
+      text-align: left;
+    }
   }
 
   &__slider {
